<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sous.votre_nom.enst.fr.sous.Activity">



    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_dollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convertdollars_label"
            android:onClick="chooseconverter"/>
        <RadioButton android:id="@+id/radio_yen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convertyen_label"
            android:onClick="chooseconverter"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:onClick="goback"
            android:text="@string/button_next" />
    </LinearLayout>


</LinearLayout>